bplm/sfdx-src/main/default/objects/Business_Process__c/Business_Process__c.object-meta.xml
<CustomObject>
    <description>Describe what is your business process</description>
    <label>Business Process</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>