bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Business_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Brand_Name__c</fullName>
    <formula>Business_Org__r.Name</formula>
    <label>Business Brand Name</label>
    <type>Text</type>
</CustomField>