bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Business_Org__c.field-meta.xml
<CustomField>
    <fullName>Business_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Org</label>
    <referenceTo>BusinessBrand</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>Business_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>