bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Business_Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>business process owner i.e. dept head?</description>
    <inlineHelpText>business process owner i.e. dept head?</inlineHelpText>
    <label>Business Process Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Business Processes</relationshipLabel>
    <relationshipName>BP2BpOwner</relationshipName>
    <type>Lookup</type>
</CustomField>