bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Business_SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_SObject_Type__c</fullName>
    <description>Which SObject Type will represent this process records/</description>
    <label>Business SObject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>