bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Developer_Name__c</fullName>
    <formula>SUBSTITUTE(TRIM(Name), &apos; &apos;, &apos;_&apos;)</formula>
    <label>Developer Name</label>
    <type>Text</type>
</CustomField>