bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this business process active</description>
    <inlineHelpText>Is this business process active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>