bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Process_Summary__c.field-meta.xml
<CustomField>
    <fullName>Process_Summary__c</fullName>
    <label>Process Summary</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>