bplm/sfdx-src/main/default/objects/Business_Process__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Process_Type</valueSetName>
    </valueSet>
</CustomField>